--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Browsing App</title>
-    <link rel="stylesheet" href="/root/css/styles.css">
+    <link rel="stylesheet" href="root/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -52,6 +52,6 @@
     <footer>
         <p>&copy; 2023 Car Browsing App</p>
     </footer>
-    <script src="assets/js/scripts.js"></script>
+    <script src="root/js/scripts.js"></script>
 </body>
 </html>
