--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                     Toyota - Corolla
                 </div>
                 <div class="car" data-brand="Honda">
-                    <img src="/root/images/4d7389997d1726e124aa615b25206e1e.png" alt="Honda Civic" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/4d7389997d1726e124aa615b25206e1e.png" alt="Honda Civic" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Honda - Civic
                 </div>
                 <div class="car" data-brand="Ford">
-                    <img src="/root/images/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Ford - Mustang
                 </div>
                 <div class="car" data-brand="Tesla">
-                    <img src="/root/images/7a5f914a6246d5f4b47cf239e54897a4.png" alt="Tesla Model S" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/7a5f914a6246d5f4b47cf239e54897a4.png" alt="Tesla Model S" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Tesla - Model S
                 </div>
                 <div class="car" data-brand="BMW">
-                    <img src="/root/images/bmw-x5.png" alt="BMW X5" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/bmw-x5.png" alt="BMW X5" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     BMW - X5
                 </div>
             </div>
