--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>Available Cars</h2>
             <div id="cars">
                 <div class="car" data-brand="Toyota">
-                    <img src="/root/images/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    <img src="root/images/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Corolla
                 </div>
                 <div class="car" data-brand="Honda">
