--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <main>
         <section id="search">
             <h2>Search for Car Brands</h2>
-            <select id="brand-dropdown" onchange="filterCars()">
+            <select id="brand-dropdown" onchange="navigateToPage()">
                 <option value="">All Brands</option>
-                <option value="Toyota">Toyota</option>
-                <option value="Honda">Honda</option>
-                <option value="Ford">Ford</option>
-                <option value="Tesla">Tesla</option>
-                <option value="BMW">BMW</option>
+                <option value="toyota.html">Toyota</option>
+                <option value="honda.html">Honda</option>
+                <option value="ford.html">Ford</option>
+                <option value="tesla.html">Tesla</option>
+                <option value="bmw.html">BMW</option>
             </select>
         </section>
         <section id="car-list">
