--- a/toyota.html
+++ b/toyota.html
@@ -18,6 +18,46 @@
                     <img src="root/images/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                     Toyota - Corolla
                 </div>
+                <div class="car">
+                    <img src="root/images/camry.png" alt="Toyota Camry" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    Toyota - Camry
+                </div>
+                <div class="car">
+                    <img src="root/images/rav4.png" alt="Toyota RAV4" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    Toyota - RAV4
+                </div>
+                <div class="car">
+                    <img src="root/images/highlander.png" alt="Toyota Highlander" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    Toyota - Highlander
+                </div>
+                <div class="car">
+                    <img src="root/images/prius.png" alt="Toyota Prius" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    Toyota - Prius
+                </div>
+                <div class="car">
+                    <img src="root/images/tacoma.png" alt="Toyota Tacoma" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    Toyota - Tacoma
+                </div>
+                <div class="car">
+                    <img src="root/images/tundra.png" alt="Toyota Tundra" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    Toyota - Tundra
+                </div>
+                <div class="car">
+                    <img src="root/images/avalon.png" alt="Toyota Avalon" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    Toyota - Avalon
+                </div>
+                <div class="car">
+                    <img src="root/images/4runner.png" alt="Toyota 4Runner" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    Toyota - 4Runner
+                </div>
+                <div class="car">
+                    <img src="root/images/sienna.png" alt="Toyota Sienna" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    Toyota - Sienna
+                </div>
+                <div class="car">
+                    <img src="root/images/supra.png" alt="Toyota Supra" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                    Toyota - Supra
+                </div>
             </div>
         </section>
     </main>
