--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     <footer>
         <p>&copy; 2023 Car Browsing App</p>
     </footer>
-    <script src="root/js/scripts.js"></script>
+    <script src="/root/js/scripts.js"></script>
 </body>
 </html>
