--- a/index.html
+++ b/index.html
@@ -27,24 +27,44 @@
             <h2>Available Cars</h2>
             <div id="cars">
                 <div class="car" data-brand="Toyota">
-                    <img src="root/images/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Toyota - Corolla
+                    <a href="toyota-corolla.html" style="text-decoration: none;">
+                        <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
+                            <img src="root/images/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <span style="display: block; text-align: center; font-weight: bold;">Toyota - Corolla</span>
+                        </button>
+                    </a>
                 </div>
                 <div class="car" data-brand="Honda">
-                    <img src="root/images/4d7389997d1726e124aa615b25206e1e.png" alt="Honda Civic" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Honda - Civic
+                    <a href="honda-civic.html" style="text-decoration: none;">
+                        <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
+                            <img src="root/images/4d7389997d1726e124aa615b25206e1e.png" alt="Honda Civic" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <span style="display: block; text-align: center; font-weight: bold;">Honda - Civic</span>
+                        </button>
+                    </a>
                 </div>
                 <div class="car" data-brand="Ford">
-                    <img src="root/images/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Mustang
+                    <a href="ford-mustang.html" style="text-decoration: none;">
+                        <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
+                            <img src="root/images/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <span style="display: block; text-align: center; font-weight: bold;">Ford - Mustang</span>
+                        </button>
+                    </a>
                 </div>
                 <div class="car" data-brand="Tesla">
-                    <img src="root/images/7a5f914a6246d5f4b47cf239e54897a4.png" alt="Tesla Model S" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Tesla - Model S
+                    <a href="tesla-model-s.html" style="text-decoration: none;">
+                        <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
+                            <img src="root/images/7a5f914a6246d5f4b47cf239e54897a4.png" alt="Tesla Model S" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <span style="display: block; text-align: center; font-weight: bold;">Tesla - Model S</span>
+                        </button>
+                    </a>
                 </div>
                 <div class="car" data-brand="BMW">
-                    <img src="root/images/bmw-x5.png" alt="BMW X5" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    BMW - X5
+                    <a href="bmw-x5.html" style="text-decoration: none;">
+                        <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
+                            <img src="root/images/bmw-x5.png" alt="BMW X5" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <span style="display: block; text-align: center; font-weight: bold;">BMW - X5</span>
+                        </button>
+                    </a>
                 </div>
             </div>
         </section>
