--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="toyota-corolla.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
                             <img src="root/images/corolla.png" alt="Toyota Corolla" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                            <span style="display: block; text-align: center; font-weight: bold;">Toyota - Corolla</span>
+                            <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">Toyota - Corolla</span>
                         </button>
                     </a>
                 </div>
@@ -38,7 +38,7 @@
                     <a href="honda-civic.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
                             <img src="root/images/4d7389997d1726e124aa615b25206e1e.png" alt="Honda Civic" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                            <span style="display: block; text-align: center; font-weight: bold;">Honda - Civic</span>
+                            <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">Honda - Civic</span>
                         </button>
                     </a>
                 </div>
@@ -46,7 +46,7 @@
                     <a href="ford-mustang.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
                             <img src="root/images/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                            <span style="display: block; text-align: center; font-weight: bold;">Ford - Mustang</span>
+                            <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">Ford - Mustang</span>
                         </button>
                     </a>
                 </div>
@@ -54,7 +54,7 @@
                     <a href="tesla-model-s.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
                             <img src="root/images/7a5f914a6246d5f4b47cf239e54897a4.png" alt="Tesla Model S" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                            <span style="display: block; text-align: center; font-weight: bold;">Tesla - Model S</span>
+                            <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">Tesla - Model S</span>
                         </button>
                     </a>
                 </div>
@@ -62,7 +62,7 @@
                     <a href="bmw-x5.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
                             <img src="root/images/bmw-x5.png" alt="BMW X5" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                            <span style="display: block; text-align: center; font-weight: bold;">BMW - X5</span>
+                            <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">BMW - X5</span>
                         </button>
                     </a>
                 </div>
