--- a/toyota-corolla.html
+++ b/toyota-corolla.html
@@ -29,6 +29,10 @@
             border: 2px solid #ffffff;
         }
 
+        p {
+            color: #cccccc; /* Lighter color for better visibility */
+        }
+
         table {
             width: 100%;
             border-collapse: collapse;
