--- a/honda-civic.html
+++ b/honda-civic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tesla Model S</title>
+    <title>Honda Civic</title>
     <link rel="stylesheet" href="root/css/styles.css">
     <style>
         /* Dark mode styles */
@@ -19,21 +19,10 @@
             text-align: center;
             padding: 1rem 0;
             background-color: #1e1e1e;
-            position: relative;
         }
 
         h1, h2 {
             color: #ffffff;
-        }
-
-        .ev-indicator {
-            width: 12px;
-            height: 12px;
-            background-color: #007bff; /* Blue color */
-            border-radius: 50%;
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
         }
 
         img {
@@ -82,47 +71,48 @@
 </head>
 <body>
     <header>
-        <h1>Tesla Model S</h1>
-        <div class="ev-indicator" title="Electric Vehicle"></div>
+        <h1>Honda Civic</h1>
     </header>
     <main>
         <section>
-            <img src="root/images/model-s.png" alt="Tesla Model S" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-            <p>The Tesla Model S is a luxury electric sedan known for its cutting-edge technology, performance, and range.</p>
+            <img src="root/images/civic.png" alt="Honda Civic" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+            <p>The Honda Civic is a compact car known for its reliability, fuel efficiency, and modern design.</p>
         </section>
         <section>
-            <h2>Tesla Model S Trims and Specifications</h2>
+            <h2>Honda Civic Trims and Specifications</h2>
             <table>
                 <thead>
                     <tr>
                         <th>Trim</th>
-                        <th>Battery</th>
-                        <th>Battery Capacity (kWh)</th>
-                        <th>Range (km)</th>
-                        <th>0-100 km/h</th>
+                        <th>Engine</th>
+                        <th>Horsepower</th>
+                        <th>Mileage (L/100km)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Model S</td>
-                        <td>Dual Motor</td>
-                        <td>100</td>
-                        <td>652</td>
-                        <td>3.2 seconds</td>
+                        <td>LX</td>
+                        <td>2.0L 4-Cylinder</td>
+                        <td>158 hp</td>
+                        <td>7.1</td>
                     </tr>
                     <tr>
-                        <td>Model S Long Range</td>
-                        <td>Dual Motor</td>
-                        <td>100</td>
-                        <td>652</td>
-                        <td>3.2 seconds</td>
+                        <td>Sport</td>
+                        <td>2.0L 4-Cylinder</td>
+                        <td>158 hp</td>
+                        <td>7.4</td>
                     </tr>
                     <tr>
-                        <td>Model S Plaid</td>
-                        <td>Tri Motor</td>
-                        <td>100</td>
-                        <td>637</td>
-                        <td>2.1 seconds</td>
+                        <td>EX</td>
+                        <td>1.5L Turbocharged 4-Cylinder</td>
+                        <td>180 hp</td>
+                        <td>6.7</td>
+                    </tr>
+                    <tr>
+                        <td>Touring</td>
+                        <td>1.5L Turbocharged 4-Cylinder</td>
+                        <td>180 hp</td>
+                        <td>6.9</td>
                     </tr>
                 </tbody>
             </table>
