--- a/honda-civic.html
+++ b/honda-civic.html
@@ -38,6 +38,8 @@
             border-collapse: collapse;
             margin-top: 1rem;
             background-color: #1e1e1e;
+            border-radius: 8px; /* Rounded corners */
+            overflow: hidden; /* Ensures corners are clipped */
         }
 
         th {
@@ -113,6 +115,12 @@
                         <td>1.5L Turbocharged 4-Cylinder</td>
                         <td>180 hp</td>
                         <td>6.9</td>
+                    </tr>
+                    <tr>
+                        <td>Type R</td>
+                        <td>2.0L Turbocharged 4-Cylinder</td>
+                        <td>315 hp</td>
+                        <td>8.4</td>
                     </tr>
                 </tbody>
             </table>
