--- a/toyota-corolla.html
+++ b/toyota-corolla.html
@@ -38,6 +38,8 @@
             border-collapse: collapse;
             margin-top: 1rem;
             background-color: #1e1e1e;
+            border-radius: 8px; /* Rounded corners */
+            overflow: hidden; /* Ensures corners are clipped */
         }
 
         th {
