--- a/bmw-x5.html
+++ b/bmw-x5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tesla Model S</title>
+    <title>BMW X5</title>
     <link rel="stylesheet" href="root/css/styles.css">
     <style>
         /* Dark mode styles */
@@ -19,21 +19,10 @@
             text-align: center;
             padding: 1rem 0;
             background-color: #1e1e1e;
-            position: relative;
         }
 
         h1, h2 {
             color: #ffffff;
-        }
-
-        .ev-indicator {
-            width: 12px;
-            height: 12px;
-            background-color: #007bff; /* Blue color */
-            border-radius: 50%;
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
         }
 
         img {
@@ -101,48 +90,49 @@
 </head>
 <body>
     <header>
-        <h1>Tesla Model S</h1>
-        <div class="ev-indicator" title="Electric Vehicle"></div>
+        <h1>BMW X5</h1>
     </header>
     <main>
         <a class="back-button" onclick="history.back()">← Back</a>
         <section>
-            <img src="root/images/model-s.png" alt="Tesla Model S" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-            <p>The Tesla Model S is a luxury electric sedan known for its cutting-edge technology, performance, and range.</p>
+            <img src="root/images/bmw-x5.png" alt="BMW X5" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+            <p>The BMW X5 is a luxury midsize SUV offering a blend of performance, comfort, and advanced technology.</p>
         </section>
         <section>
-            <h2>Tesla Model S Trims and Specifications</h2>
+            <h2>BMW X5 Trims and Specifications</h2>
             <table>
                 <thead>
                     <tr>
                         <th>Trim</th>
-                        <th>Battery</th>
-                        <th>Battery Capacity (kWh)</th>
-                        <th>Range (km)</th>
-                        <th>0-100 km/h</th>
+                        <th>Engine</th>
+                        <th>Horsepower</th>
+                        <th>Mileage (L/100km)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Model S</td>
-                        <td>Dual Motor</td>
-                        <td>100</td>
-                        <td>652</td>
-                        <td>3.2 seconds</td>
+                        <td>xDrive40i</td>
+                        <td>3.0L Turbocharged Inline-6</td>
+                        <td>335 hp</td>
+                        <td>9.2</td>
                     </tr>
                     <tr>
-                        <td>Model S Long Range</td>
-                        <td>Dual Motor</td>
-                        <td>100</td>
-                        <td>652</td>
-                        <td>3.2 seconds</td>
+                        <td>xDrive45e</td>
+                        <td>3.0L Turbocharged Inline-6 + Electric Motor</td>
+                        <td>389 hp</td>
+                        <td>3.2 (Hybrid)</td>
                     </tr>
                     <tr>
-                        <td>Model S Plaid</td>
-                        <td>Tri Motor</td>
-                        <td>100</td>
-                        <td>637</td>
-                        <td>2.1 seconds</td>
+                        <td>M50i</td>
+                        <td>4.4L Twin-Turbocharged V8</td>
+                        <td>523 hp</td>
+                        <td>12.1</td>
+                    </tr>
+                    <tr>
+                        <td>X5 M</td>
+                        <td>4.4L Twin-Turbocharged V8</td>
+                        <td>617 hp</td>
+                        <td>13.1</td>
                     </tr>
                 </tbody>
             </table>
