--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="car" data-brand="Honda">
                     <a href="honda-civic.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
-                            <img src="root/images/4d7389997d1726e124aa615b25206e1e.png" alt="Honda Civic" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <img src="root/images/civic.png" alt="Honda Civic" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                             <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">Honda - Civic</span>
                         </button>
                     </a>
@@ -53,7 +53,7 @@
                 <div class="car" data-brand="Tesla">
                     <a href="tesla-model-s.html" style="text-decoration: none;">
                         <button style="width: 100%; border: none; background: none; padding: 0; cursor: pointer;">
-                            <img src="root/images/7a5f914a6246d5f4b47cf239e54897a4.png" alt="Tesla Model S" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                            <img src="root/images/model-s.png" alt="Tesla Model S" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
                             <span style="display: block; text-align: center; font-weight: bold; color: #f0f0f0;">Tesla - Model S</span>
                         </button>
                     </a>
@@ -72,6 +72,6 @@
     <footer>
         <p>&copy; 2023 Car Browsing App</p>
     </footer>
-    <script src="/root/js/scripts.js"></script>
+    <script src="root/js/scripts.js"></script>
 </body>
 </html>
