--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <option value="ford.html">Ford</option>
                 <option value="tesla.html">Tesla</option>
                 <option value="bmw.html">BMW</option>
+                <option value="bugatti.html">Bugatti</option>
+                <option value="ferrari.html">Ferrari</option>
+                <option value="mopar.html">Mopar</option>
+                <option value="volkswagen.html">Volkswagen</option>
+                <option value="mercedes.html">Mercedes</option>
             </select>
         </section>
         <section id="car-list">
