--- a/ford.html
+++ b/ford.html
@@ -11,94 +11,180 @@
         <h1>Ford Cars</h1>
     </header>
     <main>
+        <a class="back-button" onclick="history.back()">← Back</a>
         <section id="car-list">
             <h2>Available Ford Cars</h2>
             <div id="cars">
-                <div class="car">
-                    <img src="root/images/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Mustang
-                </div>
-                <div class="car">
-                    <img src="root/images/f150.png" alt="Ford F-150" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - F-150
-                </div>
-                <div class="car">
-                    <img src="root/images/escape.png" alt="Ford Escape" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Escape
-                </div>
-                <div class="car">
-                    <img src="root/images/explorer.png" alt="Ford Explorer" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Explorer
-                </div>
-                <div class="car">
-                    <img src="root/images/bronco.png" alt="Ford Bronco" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Bronco
-                </div>
-                <div class="car">
-                    <img src="root/images/ranger.png" alt="Ford Ranger" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Ranger
-                </div>
-                <div class="car">
-                    <img src="root/images/edge.png" alt="Ford Edge" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Edge
-                </div>
-                <div class="car">
-                    <img src="root/images/fusion.png" alt="Ford Fusion" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Fusion
-                </div>
-                <div class="car">
-                    <img src="root/images/expedition.png" alt="Ford Expedition" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Expedition
-                </div>
-                <div class="car">
-                    <img src="root/images/maverick.png" alt="Ford Maverick" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Maverick
-                </div>
-                <div class="car">
-                    <img src="root/images/gt.png" alt="Ford GT" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - GT
-                </div>
-                <div class="car">
-                    <img src="root/images/transit.png" alt="Ford Transit" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Transit
-                </div>
-                <div class="car">
-                    <img src="root/images/focus.png" alt="Ford Focus" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Focus
-                </div>
-                <div class="car">
-                    <img src="root/images/taurus.png" alt="Ford Taurus" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Taurus
-                </div>
-                <div class="car">
-                    <img src="root/images/ecosport.png" alt="Ford EcoSport" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - EcoSport
-                </div>
-                <div class="car">
-                    <img src="root/images/flex.png" alt="Ford Flex" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Flex
-                </div>
-                <div class="car">
-                    <img src="root/images/cmax.png" alt="Ford C-Max" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - C-Max
-                </div>
-                <div class="car">
-                    <img src="root/images/fiesta.png" alt="Ford Fiesta" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Fiesta
-                </div>
-                <div class="car">
-                    <img src="root/images/everest.png" alt="Ford Everest" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Everest
-                </div>
-                <div class="car">
-                    <img src="root/images/puma.png" alt="Ford Puma" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
-                    Ford - Puma
-                </div>
+                <a href="ford-mustang.html" class="car-tile">
+                    <button>
+                        <img src="root/images/mustang.png" alt="Ford Mustang" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Mustang</span>
+                    </button>
+                </a>
+                <a href="ford-f150.html" class="car-tile">
+                    <button>
+                        <img src="root/images/f150.png" alt="Ford F-150" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - F-150</span>
+                    </button>
+                </a>
+                <a href="ford-escape.html" class="car-tile">
+                    <button>
+                        <img src="root/images/escape.png" alt="Ford Escape" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Escape</span>
+                    </button>
+                </a>
+                <a href="ford-explorer.html" class="car-tile">
+                    <button>
+                        <img src="root/images/explorer.png" alt="Ford Explorer" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Explorer</span>
+                    </button>
+                </a>
+                <a href="ford-bronco.html" class="car-tile">
+                    <button>
+                        <img src="root/images/bronco.png" alt="Ford Bronco" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Bronco</span>
+                    </button>
+                </a>
+                <a href="ford-ranger.html" class="car-tile">
+                    <button>
+                        <img src="root/images/ranger.png" alt="Ford Ranger" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Ranger</span>
+                    </button>
+                </a>
+                <a href="ford-edge.html" class="car-tile">
+                    <button>
+                        <img src="root/images/edge.png" alt="Ford Edge" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Edge</span>
+                    </button>
+                </a>
+                <a href="ford-fusion.html" class="car-tile">
+                    <button>
+                        <img src="root/images/fusion.png" alt="Ford Fusion" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Fusion</span>
+                    </button>
+                </a>
+                <a href="ford-expedition.html" class="car-tile">
+                    <button>
+                        <img src="root/images/expedition.png" alt="Ford Expedition" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Expedition</span>
+                    </button>
+                </a>
+                <a href="ford-maverick.html" class="car-tile">
+                    <button>
+                        <img src="root/images/maverick.png" alt="Ford Maverick" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Maverick</span>
+                    </button>
+                </a>
+                <a href="ford-gt.html" class="car-tile">
+                    <button>
+                        <img src="root/images/gt.png" alt="Ford GT" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - GT</span>
+                    </button>
+                </a>
+                <a href="ford-transit.html" class="car-tile">
+                    <button>
+                        <img src="root/images/transit.png" alt="Ford Transit" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Transit</span>
+                    </button>
+                </a>
+                <a href="ford-focus.html" class="car-tile">
+                    <button>
+                        <img src="root/images/focus.png" alt="Ford Focus" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Focus</span>
+                    </button>
+                </a>
+                <a href="ford-taurus.html" class="car-tile">
+                    <button>
+                        <img src="root/images/taurus.png" alt="Ford Taurus" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Taurus</span>
+                    </button>
+                </a>
+                <a href="ford-ecosport.html" class="car-tile">
+                    <button>
+                        <img src="root/images/ecosport.png" alt="Ford EcoSport" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - EcoSport</span>
+                    </button>
+                </a>
+                <a href="ford-flex.html" class="car-tile">
+                    <button>
+                        <img src="root/images/flex.png" alt="Ford Flex" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Flex</span>
+                    </button>
+                </a>
+                <a href="ford-cmax.html" class="car-tile">
+                    <button>
+                        <img src="root/images/cmax.png" alt="Ford C-Max" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - C-Max</span>
+                    </button>
+                </a>
+                <a href="ford-fiesta.html" class="car-tile">
+                    <button>
+                        <img src="root/images/fiesta.png" alt="Ford Fiesta" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Fiesta</span>
+                    </button>
+                </a>
+                <a href="ford-everest.html" class="car-tile">
+                    <button>
+                        <img src="root/images/everest.png" alt="Ford Everest" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Everest</span>
+                    </button>
+                </a>
+                <a href="ford-puma.html" class="car-tile">
+                    <button>
+                        <img src="root/images/puma.png" alt="Ford Puma" style="width: 100%; border-radius: 8px; margin-bottom: 0.5rem;">
+                        <span>Ford - Puma</span>
+                    </button>
+                </a>
             </div>
         </section>
     </main>
     <footer>
         <p>&copy; 2023 Car Browsing App</p>
     </footer>
+    <style>
+        .back-button {
+            display: inline-block;
+            margin: 1rem;
+            padding: 0.5rem 1rem;
+            background-color: #007bff;
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            cursor: pointer;
+            text-align: center;
+        }
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+        .car-tile {
+            display: block;
+            margin-bottom: 1.5rem;
+            text-decoration: none;
+        }
+        .car-tile button {
+            width: 100%;
+            border: none;
+            background: #222;
+            color: #f0f0f0;
+            border-radius: 8px;
+            padding: 0;
+            cursor: pointer;
+            transition: background 0.2s;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .car-tile button:hover {
+            background: #333;
+        }
+        .car-tile span {
+            display: block;
+            text-align: center;
+            font-weight: bold;
+            color: #f0f0f0;
+            margin-bottom: 0.5rem;
+        }
+    </style>
 </body>
 </html>
