--- a/toyota.html
+++ b/toyota.html
@@ -11,6 +11,7 @@
         <h1>Toyota Cars</h1>
     </header>
     <main>
+        <a class="back-button" onclick="history.back()">← Back</a>
         <section id="car-list">
             <h2>Available Toyota Cars</h2>
             <div id="cars">
@@ -64,5 +65,22 @@
     <footer>
         <p>&copy; 2023 Car Browsing App</p>
     </footer>
+    <style>
+        .back-button {
+            display: inline-block;
+            margin: 1rem;
+            padding: 0.5rem 1rem;
+            background-color: #007bff;
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            cursor: pointer;
+            text-align: center;
+        }
+        .back-button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </body>
 </html>
